src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: "Inter V";
	font-weight: 100 900;
	font-style: normal;
	font-display: block;
	src: url("/fonts/Inter-V.var.woff2") format("woff2");

	font-named-instance: "Regular";
}

/* adding col class becasue tailind dynamic col class are not working for some reason */
.columns-1 {
	columns: 1;
}

.columns-2 {
	columns: 2;
}

.columns-3 {
	columns: 3;
}

.columns-4 {
	columns: 4;
}

.columns-5 {
	columns: 5;
}

body {
	@apply overflow-hidden antialiased outline-none;

	font-variation-settings: "opsz" 20;
}

main {
	height: calc(100vh - 48.5px);
}

.my-masonry-grid {
	@apply ml-[-24px] flex w-auto;
}

.my-masonry-grid_column {
	@apply bg-clip-padding pl-[24px];
}

/* Style your items */
.my-masonry-grid_column > div {
	@apply mb-[30px] bg-gray-100;
}

.sash-module_sash__K-9lB::before {
	background: unset !important;
}

/* slider */

.chakra-slider-group {
	@apply relative flex w-full;
}

.chakra-slider-group .slider-label {
	@apply mb-[0.5rem] flex self-stretch;
}

.chakra-slider-group .label {
	@apply text-custom-gray-2;
}

.chakra-slider-group .value {
	@apply ml-auto text-custom-gray-2;
}

.chakra-slider-group .slider {
	@apply relative inline-block w-full touch-none select-none outline-0;
}

.chakra-slider-group .slider.vertical {
	@apply h-[320px];
}

.chakra-slider-group .slider-track-container {
	@apply relative w-full cursor-pointer px-0 py-[7px];
}

.chakra-slider-group .vertical .slider-track-container {
	@apply h-full w-fit px-[7px] py-0;
}

.chakra-slider-group .slider-track {
	@apply h-1 w-full rounded-sm bg-custom-gray-2;
}

.chakra-slider-group .vertical .slider-track {
	@apply h-full w-1;
}

.chakra-slider-group .slider-filled-track {
	@apply absolute top-[50%] h-1 -translate-y-2/4 rounded-sm bg-gray-light-12;
}

.chakra-slider-group .vertical .slider-filled-track {
	@apply bottom-0 left-[50%] w-1 -translate-x-2/4;
}

.chakra-slider-group .slider-thumb {
	@apply absolute top-[50%] z-[1] flex flex-col items-center;
}

.chakra-slider-group .vertical .slider-thumb {
	@apply left-[2px] flex-row items-center;
}

.chakra-slider-group .slider-thumb:focus-within {
	@apply z-10;
}

.chakra-slider-group .slider-thumb .slider-thumb-handle {
	@apply flex h-4 w-4 cursor-pointer touch-none select-none items-center justify-center rounded-full bg-white shadow-md;
}

.chakra-slider-group .slider-thumb-handle:focus-within {
	box-shadow: 0 0 0 2px #171717;
}

.chakra-slider-group .slider-thumb-tip {
	@apply mt-2;
}

.chakra-slider-group .vertical .slider-thumb-tip {
	@apply ml-2;
}

/* for icon dropdown */
.custom-select[aria-selected="true"] {
	@apply bg-custom-gray-7; /* Apply your desired styles here */
}

/* drag and drop */

/* for the select card styles on card and moodboard views */
.single-bookmark[aria-selected="true"] .card-moodboard-info-wrapper {
	@apply rounded-b-lg rounded-t-none bg-black text-white;
}

/* for the select card styles on list and headlines views */
.single-bookmark[aria-selected="true"].list-headlines-wrapper {
	@apply bg-black text-white;
}

.single-bookmark[aria-selected="true"] .card-title {
	@apply text-white;
}

.single-bookmark[aria-selected="true"] .moodboard-card-img {
	@apply rounded-bl-none rounded-br-none;
}

.drop-target .side-pane-anchor {
	@apply bg-custom-gray-2;
}

.drop-indicator {
	@apply -mb-[2px] ml-0 h-[2px] w-full bg-transparent outline-none;
}

.drop-indicator:last-child {
	@apply -mt-[2px] mb-0;
}

.drop-indicator.drop-target {
	@apply bg-black;
}

/* signup-page */

.sign-up-parent {
	@apply relative;
}

.sign-up-parent::before {
	@apply absolute left-0 top-0 -z-10 h-full w-full bg-[url('/Group1.png')] bg-contain bg-no-repeat content-[""];
}

/* aria modal */
.secondary {
	@apply bg-transparent text-current;
}

[data-backdrop] {
	@apply flex items-center justify-center;
}

.dark [data-backdrop] {
}

@media (width >= 768px) {
	[data-backdrop] {
		@apply items-start;
	}
}

[data-backdrop] {
	@apply bg-modal-bg;
}

.dropdown-container input[type="radio"] {
	@apply absolute opacity-0;
}

.dropdown-container input[aria-checked="true"] + input::after {
	@apply absolute right-2 top-[50%] h-3 w-3 -translate-y-2/4 bg-[url('/public/tickIcon.svg')] content-[""];
}

.search-bar__input:focus-visible {
	@apply outline-0;
}

.aria-select-item[data-active-item] {
	@apply bg-gray-light-4 text-gray-light-12;
}

.aria-checkbox:checked + .checkbox-div::before {
	@apply absolute z-[2] h-full w-full rounded bg-black bg-[url('/checkbox-tick.svg')] bg-center bg-no-repeat content-[""];
}

input[type="checkbox"]:checked + .checkbox-div {
	@apply border-none;
}

.icon-svg-parent svg {
	@apply fill-current;
}

.icon-color-container::-webkit-scrollbar {
	@apply hidden;
}

.sash-container .sash-module_sash__K-9lB {
	/* this is to solve the sidepane resize bar z-index issue */

	@apply z-[5];
}

.aria-multi-select span {
	@apply hidden;
}

#modal-parent-portal div[role="presentation"] {
	/* adding this to have z-index in modal so that nothing overlaps the modal */

	/* adding important as the modal library does not give access to this div and the div already has z-index: auto so we are overriding it */
	@apply z-[102] !important;
}

.menu-wrapper {
	scrollbar-width: none;

	@apply z-50 snap-x snap-mandatory snap-always overflow-scroll scroll-smooth rounded-xl border border-solid;
}

/* toast styles */
.Toastify__toast-container.Toastify__toast-container--bottom-right {
	@apply w-[202px];
}

.Toastify__toast.Toastify__toast-theme--light.Toastify__toast--error {
	box-shadow:
		0 64px 18px 0 rgb(0 0 0 / 0%),
		0 41px 16px 0 rgb(0 0 0 / 2%),
		0 23px 14px 0 rgb(0 0 0 / 6%),
		0 10px 10px 0 rgb(0 0 0 / 11%),
		0 3px 6px 0 rgb(0 0 0 / 13%);

	@apply min-h-0 rounded-2xl bg-gray-light-12 px-4 py-3;
}

.Toastify__toast.Toastify__toast-theme--light.Toastify__toast--success {
	box-shadow:
		0 64px 18px 0 rgb(0 0 0 / 0%),
		0 41px 16px 0 rgb(0 0 0 / 2%),
		0 23px 14px 0 rgb(0 0 0 / 6%),
		0 10px 10px 0 rgb(0 0 0 / 11%),
		0 3px 6px 0 rgb(0 0 0 / 13%);

	@apply min-h-0 rounded-2xl bg-gray-light-12 px-4 py-3;
}

.Toastify__toast-body {
	/* adding  important to override the default toast styles */
	@apply m-0 p-0 !important;
}

.search-bar__input:focus {
	@apply text-gray-light-12;
}

.search-wrapper {
	@apply text-grayDark-grayDark-600;
}

.search-wrapper:has(:focus) {
	@apply text-gray-light-12;
}

.search-bar__input::placeholder {
	/* color: ; */

	@apply text-grayDark-grayDark-600;
}

.search-bar__input::placeholder:focus {
	/* color: ; */

	@apply text-gray-light-12;
}

/* for the collections side pane arrow collapse rotate */
.aria-disclosure-button[aria-expanded="false"]
	.collections-sidepane-down-arrow {
	rotate: -90deg;
	transition: rotate 150ms;
}

.aria-disclosure-button[aria-expanded="true"] .collections-sidepane-down-arrow {
	rotate: 0deg;
	transition: rotate 150ms;
}

/* for side pane resizer animation */
.split-view .sash-vertical {
	/* adding important as some styles get getting overridden by lib */
	@apply z-10 ml-[5px] w-[20px] -translate-x-2/4  hover:cursor-grab active:cursor-grabbing !important;

	/* for the drag handle to be in sync when side pane size when resizing */
	transition: all 0.15s ease-in-out;

	&::before {
		transition: width 200ms ease-out;

		@apply w-0 -translate-x-2/4;
	}
}

.split-view .sash-vertical:hover {
	&::before {
		@apply w-2 bg-gray-gray-100 !important;
	}
}

.split-view .sash-vertical:not(:hover) {
	&::before {
		@apply w-[0px] bg-gray-gray-100 !important;
	}
}

.split-left-pane,
.split-right-pane {
	will-change: width;
	transition: all 0.15s ease-in-out;
}

.split-view-container.split-view-sash-dragging .split-left-pane,
.split-view-container.split-view-sash-dragging .split-right-pane {
	/* disable animation while sash dragging */
	transition: none;
}

/* for the drag handle to be in sync when side pane size is reset */
.split-view-container.split-view-sash-dragging .sash-vertical {
	transition: none;
}

